# Qwertickle

./: .gitignore  Makefile.in  README  README.md  aclocal.m4  autogen.sh  configure  configure.ac
data/: Makefile.am  Makefile.in  qwertickle.desktop  qwertickle.desktop.in
dev/: control
src/: .qwertickle.c.swp  .qwertickle.h.swp  Makefile.am  Makefile.in  qwertickle.c  qwertickle.h
