desktopdir = $(datadir)/applications
desktop_DATA = $(PACKAGE).desktop

pixmapsdir = $(datadir)/pixmaps
pixmaps_DATA = $(PACKAGE).png

imagesdir = $(datadir)/$(PACKAGE)
images_DATA = $(PACKAGE).png

soundsdir = $(datadir)/$(PACKAGE)
sounds_DATA = typewriter-backspace.mp3 \
	      typewriter-key.mp3 \
	      typewriter-return.mp3 \
	      typewriter-space-bar.mp3

EXTRA_DIST = $(desktop_DATA) \
	     $(pixmaps_DATA) \
	     $(images_DATA) \
	     $(sounds_DATA)
